--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <!-- Afbeeldingen: https://www.freepik.com/free-vector/rainforest-scene-with-wild-animals_15959157.htm#fromView=image_search_similar&page=1&position=6&uuid=b45f4681-2e6e-4337-9738-034cb7ecd6fc&query=rainforest-scene-with-wild-animals-->
     <!--https://www.freepik.com/free-vector/wild-animal-cartoon-character-forest-scene_13987622.htm#fromView=image_search_similar&page=2&position=11&uuid=b45f4681-2e6e-4337-9738-034cb7ecd6fc&query=rainforest-scene-with-wild-animals-->
     <main>
-        <div class="zoeklijst">
+        <div class="dierenlijst">
             <div id="menu">
-                <ul class="item-lijst">
+                <ul class="dierenLijst">
                     <li data-item="buidelmuis"><img src="image/buidelmuis.jpg" alt="buidelmuis"></li>
                     <li data-item="kikker"><img src="image/kikker.jpg" alt="kikker"></li>
                     <li data-item="leguaan"><img src="image/leguaan.jpg" alt="leguaan"></li>
@@ -30,9 +30,9 @@
                     <li data-item="vleermuis"><img src="image/vleermuis.jpg" alt="vleermuis"></li>
                 </ul>
             </div>
-
-            <div id="zoekplaat">
-                <img src="image/zoekplaat.jpg" id="zoekplaat-img" alt="Zoekplaat">
+    
+            <div id="zoekAfbeelding">
+                <img src="image/zoekplaat.jpg" id="zoekAfbeeldingImg" alt="Zoekplaat">
             </div>
         </div>
     </main>
