--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="javascript/javascript.js" defer></script>
     <link rel="stylesheet" href="css/style.css">
     <title>Zoekplaatje</title>
-    <link rel="icon" type="image/x-icon" href="/image/favicons/favicon.ico">
+    <link rel="icon" href="image/favicon/favicon.ico" type="image/x-icon">
 </head>
 
 <body class="afbeelding">
